--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: #0a427a; /* Tailwind slate-50 */
-            background-image: url('C:/Users/yogit/OneDrive/Desktop/ParityPower/edenburg.jpg');
+            background-image: url('edenburg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -162,27 +162,27 @@
         <!-- Right side for images -->
         <div class="w-full md:w-1/2 mt-8 md:mt-0 md:pl-8 flex justify-center items-center">
             <div class="grid grid-cols-2 gap-10">
-                <img src="C:\Users\yogit\OneDrive\Desktop\ParityPower\6404d3e0cc877f4ba6fa55d85b68a999.jpg" 
+                <img src="  6404d3e0cc877f4ba6fa55d85b68a999.jpg" 
                     alt="Taj Mahal"
                     class="w-40 h-40 object-cover rounded-full drop-shadow-[0_8px_8px_rgba(0,0,0,0.8)] float-up delay-1" />
 
-                <img src="c:\Users\yogit\OneDrive\Desktop\ParityPower\Disneyland.jpg" 
+                <img src="  Disneyland.jpg" 
                     alt="Burj Khalifa"
                     class="w-40 h-40 object-cover rounded-full drop-shadow-[0_8px_8px_rgba(0,0,0,0.8)] float-down delay-2" />
 
-                <img src="C:\Users\yogit\OneDrive\Desktop\ParityPower\60169a2295c4f68b8fe797d4d307bcaa.jpg" 
+                <img src="  60169a2295c4f68b8fe797d4d307bcaa.jpg" 
                     alt="Eiffel Tower"
                     class="w-40 h-40 object-cover rounded-full drop-shadow-[0_8px_8px_rgba(0,0,0,0.8)] float-up delay-3" />
 
-                <img src="C:\Users\yogit\OneDrive\Desktop\ParityPower\Burjkhalifa.jpg" 
+                <img src="  Burjkhalifa.jpg" 
                     alt="Statue of Liberty"
                     class="w-40 h-40 object-cover rounded-full drop-shadow-[0_8px_8px_rgba(0,0,0,0.8)] float-down delay-4" />
 
-                <img src="C:\Users\yogit\OneDrive\Desktop\ParityPower\Disneyland.jpg" 
+                <img src="  Disneyland.jpg" 
                     alt="Edenburg"
                     class="w-40 h-40 object-cover rounded-full drop-shadow-[0_8px_8px_rgba(0,0,0,0.8)] float-up delay-5" />
 
-                <img src="C:\Users\yogit\OneDrive\Desktop\ParityPower\edenburg.jpg" 
+                <img src="  edenburg.jpg" 
                     alt="Swiss Alps"
                     class="w-40 h-40 object-cover rounded-full drop-shadow-[0_8px_8px_rgba(0,0,0,0.8)] float-down delay-6" />
             </div>
